/* 
  Localizable.strings
  QuarantineApp

  Created by Topias Peiponen on 15.4.2020.
  Copyright © 2020 Roope Vaarama. All rights reserved.
*/

"Home" = "Home";
"Community" = "Community";
"Profile" = "Profile";
"All" = "All";
"Search" = "Search";
"Movies" = "Movies";
"Shows" = "Shows";
"Games" = "Games";
"Streams" = "Streams";
"COVID Tracker" = "COVID Tracker";
"Logout" = "Logout";
"Help" = "Help";

"Login" = "Login";
"Register" = "Register";
"Continue as guest" = "Continue as guest";
"Go to login" = "Go to login";

"Cases" = "Cases";
"Deaths" = "Deaths";
"Recovered" = "Recovered";
"Total" = "Total";

"Name" = "Name";
"Usename" = "Usename";
"Email" = "Email";

"The Community" = "The Community";
"User Reviews" = "User Reviews";
"Other stuff" = "Other stuff";
"The community is here!" = "The community is here!";
"See what other users are recommending and share your own reviews of things to do online!" = "See what other users are recommending and share your own reviews of things to do online!";
"TV Shows" = "TV Shows";
"Books" = "Books";
"Sports" = "Sports";
"Reviewer" = "Reviewer";
"Rating (out of 5 stars)" = "Rating (out of 5 stars)";
"Category" = "Category";
"Name" = "Name";
"Review" = "Review";

"Back" = "Back";
"Cancel" = "Cancel";
"Save" = "Save";
"Category" = "Category";
"Review" = "Review";
"Create a Review" = "Create a Review";

"Jokes" = "Jokes";
"Next Joke" = "Next Joke";
