...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login-->
        <scene sceneID="fq0-zo-mf2">
            <objects>
                <viewController storyboardIdentifier="Auth" title="Login" id="QxY-ve-y0u" customClass="LoginViewController" customModule="QuarantineApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="6bK-23-G0j">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="46" translatesAutoresizingMaskIntoConstraints="NO" id="3le-Bk-74F">
                                <rect key="frame" x="0.0" y="128" width="414" height="426.5"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zic-QW-lcA" userLabel="LoginTitle">
                                        <rect key="frame" x="169" y="0.0" width="76.5" height="38.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wPv-6s-ofv" userLabel="UsernameField">
                                        <rect key="frame" x="16" y="84.5" width="382" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RGF-fG-8aP" userLabel="PasswordField">
                                        <rect key="frame" x="16" y="164.5" width="382" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bQY-7j-mmi" userLabel="LoginButton">
                                        <rect key="frame" x="64" y="244.5" width="286" height="30"/>
...
                                            <action selector="loginButton:" destination="QxY-ve-y0u" eventType="touchUpInside" id="BES-dG-K47"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LJC-dd-YDV" userLabel="RegisterButton">
                                        <rect key="frame" x="64" y="320.5" width="286" height="30"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        <state key="normal" title="Go to register">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="toRegister:" destination="QxY-ve-y0u" eventType="touchUpInside" id="Bqg-7X-sek"/>
                                        </connections>
                                    </button>
...
