...
    //MARK: FirebaseAuth
    //Authenticate to firebase
    func loginUser(loginEmail: String, loginPassword: String) {
        //Since firebase requires email usage, we are hardcoding it
        Auth.auth().signIn(withEmail: ("\(loginEmail)@quarantodo.info"), password: loginPassword) { [weak self] authResult, error in
            guard error == nil else {
                let alertController = UIAlertController(title: "Login error", message: error!.localizedDescription.replacingOccurrences(of: "email address", with: "username"), preferredStyle: .alert)
                alertController.addAction(UIAlertAction(title: "OK", style: .default))
                self!.present(alertController, animated: true, completion: nil)
                return
            }
            self!.performSegue(withIdentifier: "loginToMain", sender: nil)
        }
    }
...
