...
                    </view>
                    <navigationItem key="navigationItem" id="oM3-sY-C3P">
                        <barButtonItem key="leftBarButtonItem" style="plain" id="EUg-PI-s7t">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="e2C-tX-jdM">
                                <rect key="frame" x="20" y="11" width="21" height="22"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="line.horizontal.3" catalog="system"/>
                            </button>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="countryTableView" destination="uDG-Zc-zKL" id="u6U-jD-GZS"/>
...
            <point key="canvasLocation" x="1031.8840579710145" y="84.375"/>
        </scene>
        <!--Covid-19-->
        <scene sceneID="Ezb-xG-TUn">
            <objects>
                <navigationController storyboardIdentifier="CovidTracker" automaticallyAdjustsScrollViewInsets="NO" id="8NY-l4-loZ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Covid-19" image="doc.circle" catalog="system" id="gxi-Bq-Lxr"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jcb-91-Usd">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
